--- a/11ex.html
+++ b/11ex.html
@@ -257,5 +257,30 @@
       'kayu',
       'kayu',
     ]);
+
+    // function fizzbuzz() {
+    //   // let array = [];
+    //   for (i = 1; i <= 20; i++) {
+    //     if (i % 3 === 0) {
+    //       i = 'fizz';
+    //       // array.push(i);
+    //     }
+    //   }
+    //   console.log(i);
+    // }
+
+    // fizzbuzz();
+
+    for (i = 1; i <= 20; i++) {
+      if (i % 3 === 0 && i % 5 === 0) {
+        console.log('fizzbuzz');
+      } else if (i % 3 === 0) {
+        console.log('fizz');
+      } else if (i % 5 === 0) {
+        console.log('buzz');
+      }
+
+      console.log(i);
+    }
   </script>
 </html>
