--- a/11ex.html
+++ b/11ex.html
@@ -282,5 +282,30 @@
 
       console.log(i);
     }
+
+    function findIndex2(array, word) {
+      for (let i = 0; i < array.length; i++) {
+        if (array[i] === word) {
+          return i;
+        }
+      }
+
+      return -1;
+    }
+
+    function unique(array) {
+      const result = [];
+
+      for (let i = 0; i < array.length; i++) {
+        const word = array[i];
+        if (findIndex2(result, word) === -1) {
+          result.push(word);
+        }
+      }
+      console.log(result);
+    }
+
+    const apel = ['apa', 'apa', 'apa', 'apa', 'salah', 'saya'];
+    unique(apel);
   </script>
 </html>
