i had a headace sorry

--- a/12-adv-function.html
+++ b/12-adv-function.html
@@ -9,10 +9,11 @@
   <script>
     // function are value
 
-    const test = function hello() {
+    const test = function () {
       console.log('hello');
     };
 
     console.log(test);
+    test();
   </script>
 </html>
