--- a/12rps.html
+++ b/12rps.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <p class="title">Rock Paper Scissors</p>
-    <button class="buttongame" onclick=" playGame('rock')">
+    <button class="button-game" onclick=" playGame('rock')">
       <img src="rock.png" alt="" class="icon" />
     </button>
     <button class="button-game" onclick=" playGame('paper')">
