--- a/12-adv-function.html
+++ b/12-adv-function.html
@@ -37,5 +37,9 @@
       console.log('interval');
     }, 3000);
     // interval sama dengan set timeout tapi dia akan mengulang funsi itu terus menerus
+
+    ['makan', 'mandi', 'tidur'].forEach(function (value) {
+      console.log(value);
+    });
   </script>
 </html>
