--- a/12-adv-function.html
+++ b/12-adv-function.html
@@ -38,8 +38,10 @@
     }, 3000);
     // interval sama dengan set timeout tapi dia akan mengulang funsi itu terus menerus
 
-    ['makan', 'mandi', 'tidur'].forEach(function (value) {
-      console.log(value);
+    // foreach sama seperti for loop
+    // foreach ada fitur index dan value
+    ['makan', 'mandi', 'tidur'].forEach(function (value, index) {
+      console.log(value, index);
     });
   </script>
 </html>
