--- a/12-adv-function.html
+++ b/12-adv-function.html
@@ -47,5 +47,12 @@
       }
       console.log(value, index);
     });
+
+    const add = function () {
+      console.log(2 + 3);
+    };
+
+    add();
+    add();
   </script>
 </html>
