--- a/12-adv-function.html
+++ b/12-adv-function.html
@@ -72,6 +72,7 @@
       setTimeout(function () {
         document.querySelector('button').innerHTML = 'berhasil';
       }, 1000);
+      document.querySelector('button').innerHTML = 'Loading...';
     }
   </script>
 </html>
