--- a/12-adv-function.html
+++ b/12-adv-function.html
@@ -137,5 +137,12 @@
         messageElement.innerHTML = '';
       }, 2000);
     }
+
+    // arrow function
+    const arrowFunction = () => {
+      console.log('this is arrow function');
+    };
+
+    arrowFunction();
   </script>
 </html>
