--- a/12-adv-function.html
+++ b/12-adv-function.html
@@ -144,5 +144,11 @@
     };
 
     arrowFunction();
+
+    // if paramater only one, braket() its optional
+    const param1 = (param) => {
+      console.log(param + 1);
+    };
+    param1(5);
   </script>
 </html>
