--- a/12-adv-function.html
+++ b/12-adv-function.html
@@ -150,5 +150,9 @@
       console.log(param + 1);
     };
     param1(5);
+
+    // one line arrow function
+    const oneline = () => 2 + 3;
+    console.log(oneline());
   </script>
 </html>
