foreach arrow function

--- a/12-adv-function.html
+++ b/12-adv-function.html
@@ -74,7 +74,7 @@
       // foreach sama seperti for loop
       // foreach ada fitur index dan value
       ('makan', 'mandi', 'tidur'),
-    ].forEach(function (value, index) {
+    ].forEach((value, index) => {
       if (value === 'mandi') {
         return;
         // return ini sama seperti continue di for loop
