multiple evenet listener

--- a/12-adv-function.html
+++ b/12-adv-function.html
@@ -19,6 +19,10 @@
     jsbutton.addEventListener('click', () => {
       console.log('click');
     });
+    // kelebihan addevenlister adalah bisa menggunakan beberapa kali event
+    jsbutton.addEventListener('click', () => {
+      console.log('click2');
+    });
     // function are value
 
     const test = function () {
