--- a/12rps.html
+++ b/12rps.html
@@ -9,13 +9,13 @@
   </head>
   <body>
     <p class="title">Rock Paper Scissors</p>
-    <button class="button-game" onclick=" playGame('rock')">
+    <button class="button-game js-rock" onclick=" playGame('rock')">
       <img src="rock.png" alt="" class="icon" />
     </button>
-    <button class="button-game" onclick=" playGame('paper')">
+    <button class="button-game js-paper" onclick=" playGame('paper')">
       <img src="paper.png" alt="" class="icon" />
     </button>
-    <button class="button-game" onclick=" playGame('scissors')">
+    <button class="button-game js-scissors" onclick=" playGame('scissors')">
       <img src="scissors.png" alt="" class="icon" />
     </button>
     <p class="js-result"></p>
