--- a/12todo.html
+++ b/12todo.html
@@ -10,7 +10,7 @@
     <p>Todo List</p>
     <input type="text" class="js-input" />
     <input type="date" class="js-date" />
-    <button class="add" onclick="addList();">Add</button>
+    <button class="add js-add">Add</button>
     <div class="tdList"></div>
   </body>
   <script src="script/12todo.js"></script>
