--- a/12-adv-function.html
+++ b/12-adv-function.html
@@ -169,5 +169,16 @@
     // one line arrow function
     const oneline = () => 2 + 3;
     console.log(oneline());
+
+    console.log(
+      [1, -3, 5].filter((value, index) => {
+        // if (value >= 0) {
+        //   return true;
+        // } else {
+        //   return false;
+        // }
+        return value >= 0;
+      })
+    );
   </script>
 </html>
