--- a/12-adv-function.html
+++ b/12-adv-function.html
@@ -180,5 +180,12 @@
         return value >= 0;
       })
     );
+
+    // map to make new array
+    console.log(
+      [5, 5, 5].map(() => {
+        return 10;
+      })
+    );
   </script>
 </html>
