.map is easy to make duplicate arrray

--- a/12-adv-function.html
+++ b/12-adv-function.html
@@ -183,8 +183,8 @@
 
     // map to make new array
     console.log(
-      [5, 5, 5].map(() => {
-        return 10;
+      [5, 5, 5].map((value, index) => {
+        return value * 10;
       })
     );
   </script>
