--- a/12-adv-function.html
+++ b/12-adv-function.html
@@ -187,5 +187,12 @@
         return value * 10;
       })
     );
+
+    // 12j
+    const multiply = (val1, val2) => {
+      console.log(val1 * val2);
+    };
+
+    multiply(20, 10);
   </script>
 </html>
