--- a/12-adv-function.html
+++ b/12-adv-function.html
@@ -206,5 +206,11 @@
     };
 
     positive([1, -4, 5, 6]);
+
+    console.log(
+      [1, -3, 4].filter((value, index) => {
+        return value >= 0;
+      })
+    );
   </script>
 </html>
