--- a/12-adv-function.html
+++ b/12-adv-function.html
@@ -212,5 +212,13 @@
         return value >= 0;
       })
     );
+
+    const addNum = (array, num) => {
+      array.map((value, index) => {
+        console.log(value * num);
+      });
+    };
+
+    addNum([1, 3, 5], 5);
   </script>
 </html>
