--- a/12-adv-function.html
+++ b/12-adv-function.html
@@ -220,5 +220,16 @@
     };
 
     addNum([1, 3, 5], 5);
+
+    const removeEgg = (array) => {
+      array.filter((value, index) => {
+        if (value === 'egg') {
+          return value;
+        }
+        console.log(value);
+      });
+    };
+
+    removeEgg(['kacang', 'egg', 'babi']);
   </script>
 </html>
