--- a/12-adv-function.html
+++ b/12-adv-function.html
@@ -221,15 +221,33 @@
 
     addNum([1, 3, 5], 5);
 
-    const removeEgg = (array) => {
-      array.filter((value, index) => {
-        if (value === 'egg') {
-          return value;
-        }
-        console.log(value);
-      });
-    };
+    // const removeEgg = (array) => {
+    //   let count = 0;
+    //   array.filter((value, index) => {
+    //     if (count <= 2) {
+    //       if (value === 'egg') {
+    //         count++;
+    //       } else {
+    //         return value;
+    //         console.log(value);
+    //       }
+    //     }
+    //   });
+    // };
 
-    removeEgg(['kacang', 'egg', 'babi']);
+    function removeEgg(foods) {
+      let count = 0;
+
+      return foods.filter((food) => {
+        if (food === 'egg' && count < 2) {
+          count++;
+          return false;
+        }
+
+        return true;
+      });
+    }
+
+    console.log(removeEgg(['egg', 'apple', 'egg', 'babi', 'egg', 'ikan']));
   </script>
 </html>
