--- a/12rps.html
+++ b/12rps.html
@@ -30,7 +30,7 @@
     >
       Reset Score
     </button>
-    <button class="auto" onclick="autoplay();">Auto Play</button>
+    <button class="auto">Auto Play</button>
   </body>
   <script src="script/12rps.js"></script>
 </html>
